apps/ollama/resources/webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: open-webui
  ports:
    - name: http
      port: 8080
      targetPort: http
